packages/language/test/fixtures/projects/diagnostics/parse-errors/missing-close-brace.siren
# EL002 — Missing required token: closing brace
# The parser will insert a MISSING '}' node
task my-task {
    description = "missing closing brace"
